--- a/full_stack/user/templates/user_posts.html
+++ b/full_stack/user/templates/user_posts.html
@@ -15,8 +15,10 @@
 
 
 <div class="text-center my-4">
-    <a href="/user/newpost" class="btn btn-primary px-5 py-3 text-light"> ADD </a>
+<a class="btn btn-primary rounded px-5 py-3 rounded shadow-lg text-light align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">ADD</a>
 </div>
+
+
 <div class="card-group mx-5 mt-5" style="gap: 1rem; position: static !important;">
     {% for post in posts %}
       <div class="card align-items-center rounded mb-3">
@@ -44,13 +46,13 @@
         </div>
         <div class="text-right w-100 p-2">
           {% comment %} <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="#" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">Detail..</a> {% endcomment %}
-          <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}">DETAIL..</a>
+          <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}">DETAIL</a>
           <a href="deletepost/{{ post.id }}" onclick="return confirm('Will be Delete ! Are you sure?')"><button class="btn btn-outline-danger rounded float-left">REMOVE</button></a>
         </div>
       </div>
     {% endfor %}
 </div>
 
-{% comment %} {% include "post_detail.html" %} {% endcomment %}
+{% include "user_newpost_modal.html" %}
 
 {% endblock %}
