--- a/full_stack/user/templates/user_comments.html
+++ b/full_stack/user/templates/user_comments.html
@@ -36,7 +36,7 @@
           <p class="card-text"><small class="text-muted">{{ comment.create_at }}</small></p>
         </div>
         <div class="text-right w-100 p-2">
-          <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{ comment.post.id }}">DETAIL..</a>
+          <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{ comment.post.id }}">DETAIL</a>
           <a href="/user/deletecomment/{{ comment.id }}" onclick="return confirm('Will be Delete ! Are you sure?')"><button class="btn btn-outline-danger rounded float-left">REMOVE</button></a>
         </div>
       </div>
