--- a/full_stack/home/templates/login.html
+++ b/full_stack/home/templates/login.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 {% comment %}!-- Log In Start --> {% endcomment %}
-<div class="containerlog m-auto modal fade" id="containerlog">
+<div class="containerlog m-auto modal fade" id="containerlog" style="max-height: 520px;">
     {% comment %} ! SIGN UP {% endcomment %}
 	<div class="form-containerlog sign-up-containerlog">
 		<form action="/signup" method="POST">
@@ -41,6 +41,7 @@
 			<a href="#">Forgot your password?</a>
 			<button type="submit">Sign In</button>
 		</form>
+		
 	</div>
 
 	<div class="overlay-containerlog">
