--- a/full_stack/user/templates/user_posts.html
+++ b/full_stack/user/templates/user_posts.html
@@ -15,11 +15,10 @@
 
 
 <div class="text-center my-4">
-<a class="btn btn-primary rounded px-5 py-3 rounded shadow-lg text-light align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">ADD</a>
+  <a class="btn btn-primary rounded px-5 py-3 rounded shadow-lg text-light align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">ADD</a>
 </div>
 
-
-<div class="card-group mx-5 mt-5" style="gap: 1rem; position: static !important;">
+<div class="card-group mx-5" style="gap: 1rem; position: static !important;">
     {% for post in posts %}
       <div class="card align-items-center rounded mb-3">
         {% if post.image %}
