--- a/full_stack/home/templates/post_detail.html
+++ b/full_stack/home/templates/post_detail.html
@@ -20,7 +20,7 @@
     </div>
     <div class="card-body w-100 pb-3">
         <h5 class="card-title">{{ post_detail.user.get_full_name }}</h5>
-        <p class="card-text">{{ post_detail.title }}</p>
+        <p class="card-text">{{ post_detail.content }}</p>
         <p class="card-text"><small class="text-muted">{{ post_detail.create_at }}</small></p>
     </div>
 </div>
