--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -12,7 +12,8 @@
       {% endif %}
       <div class="card-body w-100">
         <h5 class="card-title">{{ post.user.get_full_name }}</h5>
-        <p class="card-text">{{ post.title }}</p>
+        <p class="card-text">{{ post.content }}</p>
+        {% comment %} {{ post.title }} {% endcomment %}
         <p class="card-text"><small class="text-muted">{{ post.create_at }}</small></p>
       </div>
       <div class="text-right w-100 p-2">
