--- a/full_stack/home/templates/post_detail.html
+++ b/full_stack/home/templates/post_detail.html
@@ -15,7 +15,7 @@
 
 {% comment %}!-- Card Detail --> {% endcomment %}
 <div class="containerlog m-auto px-3" id="containerdetail">
-    <div class="card align-items-center rounded my-4">
+    <div class="card align-items-center rounded my-4" style="border: none;">
         <img src="{{ post_detail.image.url }}" class="card-img-top" alt="NO PHOTO!!">
     </div>
     <div class="card-body w-100 pb-3">
