--- a/full_stack/user/templates/user_posts_update.html
+++ b/full_stack/user/templates/user_posts_update.html
@@ -8,7 +8,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        {% comment %} <h5 class="modal-title" id="postsupdateLabel">{{ post.user.get_full_name }}</h5> {% endcomment %}
+         <h5 class="modal-title" id="postsupdateLabel">UPDATE - {{ post.user.get_full_name }}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -17,23 +17,17 @@
               <form action="addpost" method="POST" enctype="multipart/form-data">
                   {% csrf_token %}
                   <div class="form-group">
-                      <label for="name">Your Name*</label>
-                      <input type="text" name="title" class="form-control" id="name">
-                  </div>
-                  <div class="form-group">
-                      <label for="email">Your Email*</label>
-                      <input type="email" class="form-control" id="email">
-                  </div>
-                  <div class="form-group">
                       <label for="message">Whats Up?</label>
-                      <textarea id="message" name="content" cols="30" rows="5" class="form-control"></textarea>
+                      {% for post in posts %}
+                      <textarea id="message" name="content" cols="30" rows="5" class="form-control">{{ post.content }}</textarea>
+                      {% endfor %}
                   </div>
                   <div class="form-group">
                       <label for="img">Select image:</label>
                       <input type="file" id="image" name="image" accept="image/*" class="btn btn-outline-warning rounded">
                   </div>
                   <div class="form-group">
-                      <input type="submit" value="Leave Your Review" class="btn btn-outline-success px-3 rounded">
+                      <input type="submit" value="Save" class="btn btn-outline-success px-3 rounded">
                   </div>
               </form>
           </div>
