--- a/full_stack/user/templates/user_posts_update.html
+++ b/full_stack/user/templates/user_posts_update.html
@@ -1,40 +1,26 @@
+{% extends "base.html" %}
 {% load static %}
 
 {% block body %}
 
+{% comment %} ! {% endcomment %}
 
-
-<div class="modal fade bd-example-modal-lg" id="postsupdate" tabindex="-1" role="dialog" aria-labelledby="postsupdateLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-         <h5 class="modal-title" id="postsupdateLabel">UPDATE - {{ post.user.get_full_name }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-          <div class="modal-body">
-              <form action="addpost" method="POST" enctype="multipart/form-data">
-                  {% csrf_token %}
-                  <div class="form-group">
-                      <label for="message">Whats Up?</label>
-                      {% for post in posts %}
-                      <textarea id="message" name="content" cols="30" rows="5" class="form-control">{{ post.content }}</textarea>
-                      {% endfor %}
-                  </div>
-                  <div class="form-group">
-                      <label for="img">Select image:</label>
-                      <input type="file" id="image" name="image" accept="image/*" class="btn btn-outline-warning rounded">
-                  </div>
-                  <div class="form-group">
-                      <input type="submit" value="Save" class="btn btn-outline-success px-3 rounded">
-                  </div>
-              </form>
-          </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary rounded px-3" data-dismiss="modal">Close</button>
-      </div>
+{% comment %} ! {% endcomment %}
+<div class="modal-dialog modal-lg">
+  <div class="modal-content">
+    <div class="modal-header">
+        <h5 class="modal-title">UPDATE - {{ profile.user.get_full_name }}</h5>
     </div>
+      <div class="modal-body">
+
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          
+          <div class="form-group">
+            <button class="btn btn-outline-success rounded py-2" type="submit">Save Changes</button>
+        </div>
+        </form>
+      </div>
   </div>
 </div>
 
