--- a/full_stack/user/templates/user_settings.html
+++ b/full_stack/user/templates/user_settings.html
@@ -7,7 +7,7 @@
 <header>
     <div class="header m-auto">
         <div class="container" style="position: relative;">
-            <h2 class="text-light px-2 m-auto border-bottom" id="navbar-text">USER PROFILE EDIT</h2>
+            <h2 class="text-light px-2 m-auto border-bottom" id="navbar-text">USER PROFILE SETTINGS</h2>
         </div>
     </div>
 </header>
