--- a/full_stack/user/templates/user_posts.html
+++ b/full_stack/user/templates/user_posts.html
@@ -54,7 +54,7 @@
 </div>
 
 {% include 'user_newpost_modal.html' %}
-{% comment %} {% include 'user_posts_update.html' %} {% endcomment %}
+{% comment %} {% include 'user_posts_update_modal.html' %} {% endcomment %}
 
 
 {% endblock %}
