--- a/full_stack/home/templates/navbar.html
+++ b/full_stack/home/templates/navbar.html
@@ -36,7 +36,7 @@
         <div class="d-flex align-items-center frame-right border-bottom">
             <!-- Icon -->
             <a class="text-reset me-3 btn btnnavbar" href="#">
-                <i class="fas fa-shopping-cart" style="color:#ee4056;"></i>
+                <i class="fa-solid fa-info" style="color:#ee4056;"></i>
             </a>
 
             <!-- Notifications -->
