--- a/full_stack/user/templates/user_posts_update.html
+++ b/full_stack/user/templates/user_posts_update.html
@@ -3,11 +3,20 @@
 
 {% block body %}
 
-{% comment %} ! {% endcomment %}
 
-{% comment %} ! {% endcomment %}
+<!-- Header -->
+<header>
+  <div class="header m-auto">
+      <div class="container" style="position: relative;">
+          <h2 class="text-light px-2 m-auto border-bottom" id="navbar-text">POST EDIT</h2>
+      </div>
+  </div>
+</header>
+<!-- Header -->
+
+
 <div class="modal-dialog modal-lg">
-  <div class="modal-content">
+  <div class="modal-content shadow-lg rounded">
     <div class="modal-header">
         <h5 class="modal-title">UPDATE - {{ profile.user.get_full_name }}</h5>
     </div>
@@ -15,9 +24,9 @@
 
         <form method="post" enctype="multipart/form-data">
           {% csrf_token %}
-          
+          {{ form.as_p }}
           <div class="form-group">
-            <button class="btn btn-outline-success rounded py-2" type="submit">Save Changes</button>
+            <button class="btn btn-outline-success rounded py-2 float-right" type="submit">Save Changes</button>
         </div>
         </form>
       </div>
