search feature added
search.html
search urls
search views

--- a/full_stack/home/static/css/main.css
+++ b/full_stack/home/static/css/main.css
@@ -341,8 +341,8 @@ div > img {
 
 #containerlog button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #2baaff;
+	background-color: #2baaff;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -411,7 +411,7 @@ div > img {
 	z-index: 2;
 }
 
-.containerloglog.right-panel-active .sign-in-containerlog {
+.containerlog .right-panel-active .sign-in-containerlog {
 	transform: translateX(100%);
 }
 
@@ -458,8 +458,8 @@ div > img {
 
 .overlay {
 	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: -webkit-linear-gradient(to right, #442bff, #41a6ff);
+	background: linear-gradient(to right, #442bff, #41a6ff);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
