--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -2,6 +2,8 @@
 {% include 'header.html' %}
 
 {% block body %}
+
+
 <div class="card-group mt-3 mx-5" style="gap: 1rem;">
   {% for post in posts %}
     <div class="card align-items-center rounded my-4">
@@ -17,9 +19,9 @@
         <p class="card-text"><small class="text-muted">{{ post.create_at }}</small></p>
       </div>
       <div class="text-right w-100 p-2">
-        <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">DETAIL</a>
+        {% comment %} <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">DETAIL</a> {% endcomment %}
 
-        {% comment %} <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}">DETAIL</a> {% endcomment %}
+        <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}">DETAIL</a>
       </div>
     </div>
   {% endfor %}
