--- a/full_stack/user/templates/user_comments.html
+++ b/full_stack/user/templates/user_comments.html
@@ -41,10 +41,10 @@
         </div>
       </div>
     {% endfor %}
-    {% comment %}! Reply Comment {% endcomment %}
-</div>
-
-
+  </div>
+  
+  
+{% comment %}! Reply Comment {% endcomment %}
 <div class="text-center shadow-lg rounded border w-25 p-4 m-auto bg-info" style="margin-top: 3rem !important;">
   <h2 class="text-light">REPLY COMMENTS</h2>
 </div>
@@ -55,10 +55,11 @@
       {% comment %} <img src="{{ comment.post.image.url }}" class="card-img-top py-4 w-75" alt="NO PHOTO!"> {% endcomment %}
     <div class="card-body w-100">
         <div class="d-flex flex-row-reverse justify-content-between">
-          <p class="card-text p-2 px-3 rounded bg-info">Reply</p>
-            <h5 class="card-title">{{ comment.user.get_full_name }}</h5>
+          <p class="p-2 rounded bg-info">Reply</p>
+            <h6 class="card-title">Comment: {{ comment.comment }}</h6>
+            {% comment %} <h5 class="card-title">{{ comment.user.get_full_name }}</h5> {% endcomment %}
         </div>
-      <p class="card-text">{{ comment.repcomment }}</p>
+      <p class="card-text">Reply: {{ comment.repcomment }}</p>
       <p class="card-text"><small class="text-muted">{{ comment.create_at }}</small></p>
     </div>
     <div class="text-right w-100 p-2">
