driver.js installed and I used active_link
        {% with request.resolver_match.url_name as url_name %}
            {% comment %} {% if url.name == 'index' %} {% endcomment %}
                <a class="text-reset me-3 btn btnnavbar" id="information" href="#" type="button"
                {% if url_name == 'index' %}
                    onclick="homeInfo()"
                {% elif url_name == 'post_detail' %}
                    onclick="detailInfo()"
                {% else %}

                {% endif %}>
                    <i class="fa-solid fa-info" style="color:#ee4056;"></i>
                </a>
        {% endwith %}

--- a/full_stack/home/templates/base.html
+++ b/full_stack/home/templates/base.html
@@ -12,6 +12,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
 
+    <!-- DRIVER JS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.css"/>
+    
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">  
