--- a/full_stack/home/templates/footer.html
+++ b/full_stack/home/templates/footer.html
@@ -76,6 +76,8 @@
 <!-- Back to Top -->
 <a href="#" class="btn btnnavbar btn-primary back-to-top "><i class="fa fa-angle-double-up"></i></a>
 
+<!-- DRIVER JS -->
+<script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
 
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
