--- a/full_stack/user/templates/user_newpost_modal.html
+++ b/full_stack/user/templates/user_newpost_modal.html
@@ -32,12 +32,12 @@
                         <input type="file" id="image" name="image" accept="image/*" class="btn btn-outline-warning rounded">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Leave Your Review" class="btn btn-outline-success px-3 rounded">
+                        <input type="submit" value="Add Post" class="btn btn-success px-3 rounded float-right">
                     </div>
                 </form>
             </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary rounded px-3" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-info rounded px-3" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
