--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -13,15 +13,15 @@
       <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top py-4 w-75" alt="...">
       {% endif %}
       <div class="card-body w-100">
-        <h5 class="card-title">{{ post.user.get_full_name }}</h5>
-        <p class="card-text">{{ post.content }}</p>
+        <h5 class="card-title" id="card-user">{{ post.user.get_full_name }}</h5>
+        <p class="card-text" id="card-content">{{ post.content }}</p>
         {% comment %} {{ post.title }} {% endcomment %}
-        <p class="card-text"><small class="text-muted">{{ post.create_at }}</small></p>
+        <p class="card-text" id="card-create"><small class="text-muted">{{ post.create_at }}</small></p>
       </div>
       <div class="text-right w-100 p-2">
         {% comment %} <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">DETAIL</a> {% endcomment %}
 
-        <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}">DETAIL</a>
+        <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" id="card-detail" href="/post_detail/{{post.id}}">DETAIL</a>
       </div>
     </div>
   {% endfor %}
