--- a/full_stack/home/templates/post_detail.html
+++ b/full_stack/home/templates/post_detail.html
@@ -19,15 +19,15 @@
         <img src="{{ post_detail.image.url }}" class="card-img-top" alt="NO PHOTO!!">
     </div>
     <div class="card-body w-100 pb-3">
-        <h5 class="card-title">{{ post_detail.user.get_full_name }}</h5>
-        <p class="card-text">{{ post_detail.content }}</p>
-        <p class="card-text"><small class="text-muted">{{ post_detail.create_at }}</small></p>
+        <h5 class="card-title" id="card-user">{{ post_detail.user.get_full_name }}</h5>
+        <p class="card-text" id="card-content">{{ post_detail.content }}</p>
+        <p class="card-text" id="card-create"><small class="text-muted">{{ post_detail.create_at }}</small></p>
     </div>
 </div>
 
 {% comment %} ! COMMENTS {% endcomment %}
 {% for comment in comments %}
-<div class="containerlog m-auto px-4 py-3" style="margin-top: 1rem !important;" >
+<div class="containerlog m-auto px-4 py-3" style="margin-top: 1rem !important;" id="card-detail-comments">
     <div class="media-body">
             <h6 class="text-muted"><i>{{ comment.create_at }}</i></h6>
         <div class="media-body">
