--- a/full_stack/user/templates/user_newpost_modal.html
+++ b/full_stack/user/templates/user_newpost_modal.html
@@ -37,7 +37,7 @@
                 </form>
             </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-info rounded px-3" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-outline-info rounded px-3" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
