--- a/full_stack/user/templates/user_posts_update.html
+++ b/full_stack/user/templates/user_posts_update.html
@@ -26,7 +26,7 @@
           {% csrf_token %}
           {{ form.as_p }}
           <div class="form-group">
-            <button class="btn btn-outline-success rounded py-2 float-right" type="submit">Save Changes</button>
+            <button class="btn btn-success rounded py-2 float-right" type="submit">Save Changes</button>
         </div>
         </form>
       </div>
