--- a/full_stack/user/templates/user_settings.html
+++ b/full_stack/user/templates/user_settings.html
@@ -29,7 +29,7 @@
         </p>
         {% endfor %}
         <div class="form-group">
-            <button class="btn btn-outline-success rounded py-2" type="submit">Save changes</button>
+            <button class="btn btn-success rounded py-2 my-2" type="submit">Save changes</button>
         </div>
       </form>
 </div>
