--- a/full_stack/home/templates/search.html
+++ b/full_stack/home/templates/search.html
@@ -17,20 +17,20 @@
 
 <div class="card-group mt-3 mx-5" style="gap: 1rem;">
     {% for post in posts %}
-        <div class="card align-items-center rounded my-4">
+        <div class="card align-items-center rounded my-4" id="carddetail">
             {% if post.image %}
             <img src="{{ post.image.url }}" class="card-img-top py-4 w-75" alt="...">
             {% else %}
             <img src="{% static 'img/cat-6.jpg' %}" class="card-img-top py-4 w-75" alt="...">
             {% endif %}
             <div class="card-body w-100">
-            <h5 class="card-title">{{ post.user.get_full_name }}</h5>
+            <h5 class="card-title" id="card-user">{{ post.user.get_full_name }}</h5>
             {% comment %} <p class="card-text">{{ post.title }}</p> {% endcomment %}
-            <p class="card-text">{{ post.content }}</p>
-            <p class="card-text"><small class="text-muted">{{ post.create_at }}</small></p>
+            <p class="card-text" id="card-content">{{ post.content }}</p>
+            <p class="card-text" id="card-create"><small class="text-muted">{{ post.create_at }}</small></p>
             </div>
             <div class="text-right w-100 p-2">
-                <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}">DETAIL</a>
+                <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}" id="card-detail">DETAIL</a>
             </div>
         </div>
     {% endfor %}
