--- a/full_stack/user/templates/user_settings_modal.html
+++ b/full_stack/user/templates/user_settings_modal.html
@@ -16,12 +16,12 @@
                     {% csrf_token %}
                     {{ form.as_p }}
                     <div class="form-group">
-                        <button class="btn btn-outline-success rounded py-2" type="submit">Save Changes</button>
+                        <button class="btn btn-success rounded py-2 float-right" type="submit">Save Changes</button>
                     </div>
                 </form>
             </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary rounded px-3" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-outline-info rounded px-3" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
