--- a/full_stack/user/templates/user_settings_modal.html
+++ b/full_stack/user/templates/user_settings_modal.html
@@ -14,6 +14,7 @@
             <div class="modal-body">
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
+                    <p>Name: <input class="my-2" type="text" name="name"/> </p>
                     {{ form.as_p }}
                     <div class="form-group">
                         <button class="btn btn-success rounded py-2 float-right" type="submit">Save Changes</button>
