--- a/full_stack/user/templates/user_settings_modal.html
+++ b/full_stack/user/templates/user_settings_modal.html
@@ -12,10 +12,12 @@
           </button>
         </div>
             <div class="modal-body">
-                <form method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <p>Name: <input class="my-2" type="text" name="name"/> </p>
-                    {{ form.as_p }}
+                <form action"{% url 'index' %}" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  <fieldset class="form-group">
+                      {{ user_form.as_p  }}
+                      {{ profile_form.as_p  }}
+                  </fieldset>
                     <div class="form-group">
                         <button class="btn btn-success rounded py-2 float-right" type="submit">Save Changes</button>
                     </div>
