Sign Up Form Updated
Added name and surname features to signup_form

--- a/full_stack/home/templates/login.html
+++ b/full_stack/home/templates/login.html
@@ -15,7 +15,10 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your email for registration</span>
-			{% comment %}! <input type="text" name="user" placeholder="First Name - Last Name"/> {% endcomment %}
+			<div class="d-flex" style="gap: .1rem;">
+				<input type="text" name="first_name" placeholder="Name"/>
+				<input type="text" name="last_name" placeholder="Surname"/>
+			</div>
 			<input type="text" name="username" placeholder="Username"/>
 			<input type="email" name="email" placeholder="Email"/>
 			<input type="password" name="password" placeholder="Password"/>
