--- a/full_stack/user/templates/user_password_modal.html
+++ b/full_stack/user/templates/user_password_modal.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="modal fade bd-example-modal-lg mt-2" id="containereditprofile" tabindex="-1" role="dialog" aria-labelledby="containerdetailLabel" aria-hidden="true">
+<div class="modal fade bd-example-modal-lg mt-2" id="containerchangepassword" tabindex="-1" role="dialog" aria-labelledby="containerdetailLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content rounded">
         <div class="modal-header">
@@ -12,14 +12,11 @@
           </button>
         </div>
             <div class="modal-body">
-                <form action"{% url 'index' %}" method="POST" enctype="multipart/form-data">
+                <form action"{% url 'index' %}" method="POST">
                   {% csrf_token %}
-                  <fieldset class="form-group">
-                      {{ user_form.as_p  }}
-                      {{ profile_form.as_p  }}
-                  </fieldset>
+                      {{ password_form.as_p  }}
                     <div class="form-group">
-                        <button class="btn btn-success rounded py-2 float-right" type="submit" name="update_submit">Save Changes</button>
+                        <button class="btn btn-success rounded py-2 float-right" type="submit" name="password_submit">Save Changes</button>
                     </div>
                 </form>
             </div>
