--- a/full_stack/user/templates/user_profile.html
+++ b/full_stack/user/templates/user_profile.html
@@ -38,9 +38,10 @@
             <td class="align-middle">{{ profile.address }}</td>
             <td class="align-middle">{{ profile.city }}</td>
             <td class="align-middle">
-                <a class="btn btn-primary rounded px-3 py-2 rounded text-light align-items-center hidden-arrow" id="navbarDropdownEditProfile" type="button" data-toggle="modal" data-target="#containereditprofile">EDIT PROFILE</a>
+                <a class="btn btn-primary rounded px-4 py-2 rounded text-light align-items-center hidden-arrow" id="navbarDropdownEditProfile" type="button" data-toggle="modal" data-target="#containereditprofile">Edit Profile</a>
                 <hr>
-                <a class="btn btn-danger rounded rounded align-items-center hidden-arrow" href="/user/settings">Change Password</a>
+                <a class="btn btn-danger rounded px-3 py-2 rounded text-light align-items-center hidden-arrow" id="navbarDropdownChangePassword" type="button" data-toggle="modal" data-target="#containerchangepassword">Change Password</a>
+                {% comment %} <a class="btn btn-danger rounded rounded align-items-center hidden-arrow" href="/user/settings">Change Password</a> {% endcomment %}
             </td>
         </tr>
     </tbody>
@@ -51,5 +52,6 @@
   </div>
 
   {% include 'user_settings_modal.html' %}
+  {% include 'user_password_modal.html' %}
 
 {% endblock %}
